[gd_scene load_steps=4 format=2]

[ext_resource path="res://logic/Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/point.png" type="Texture" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.18921
margin_right = 1.18921
color = Color( 0.698039, 0.690196, 0.690196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Point" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="WordsTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CueTimer" type="Timer" parent="."]
one_shot = true

[connection signal="end" from="HUD" to="." method="_end_test"]
[connection signal="start" from="HUD" to="." method="_on_HUD_start"]
[connection signal="timeout" from="PointTimer" to="." method="_on_PointTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="WordsTimer" to="." method="_on_WordsTimer_timeout"]
[connection signal="timeout" from="CueTimer" to="." method="_on_CueTimer_timeout"]
